update suggests and imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,4 +13,11 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
-Suggests: tinytest
+Suggests: 
+    fasterize,
+    geodist,
+    spData,
+    tinytest
+Imports: 
+    sf,
+    nabor
