add bug reports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,8 @@ Authors@R:
            email = "robit.alec@gmail.com",
            comment = c(ORCID = "0000-0002-4706-1762"))
 Description: Calculates distance to features from point locations.
-URL: https://github.com/robitalec/distance-to, https://robitalec.github.io/distance-to/ 
+URL: https://github.com/robitalec/distance-to, https://robitalec.github.io/distance-to/
+BugReports: https://github.com/robitalec/distance-to/issues
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
