add if mac install, rm terra suggests

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -62,7 +62,8 @@ jobs:
           do
             eval sudo $cmd
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
-
+        if: runner.os == 'macOS'
+        run: brew install gdal-config
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
