--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -64,11 +64,16 @@ jobs:
           done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04"))')
       - name: Install system dependencies - mac
         if: runner.os == 'macOS'
-        run: brew install gdal
+        run: |
+          brew install pkg-config
+          brew install gdal
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+          Sys.setenv("R_REMOTES_NO_ERRORS_FROM_WARNINGS" = "true")
+          remotes::install_github("rspatial/terra")
         shell: Rscript {0}
 
       - name: Check
