--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,8 +72,7 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
-          Sys.setenv("R_REMOTES_NO_ERRORS_FROM_WARNINGS" = "true")
-          remotes::install_github("rspatial/terra")
+          install.packages('terra', repos='https://rspatial.r-universe.dev')
         shell: Rscript {0}
 
       - name: Check
